@@ -18,7 +18,7 @@
 
 <addon id="metadata.imdbrt.com"
        name="IMDb + RT"
-       version="1.3.3"
+       version="1.3.4"
        provider-name="mortstar (IMDb by Team XBMC)">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
