@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.imdbrt.com"
        name="IMDb + RT"
-       version="1.3.3"
+       version="1.3.4"
        provider-name="mortstar (IMDb by Team XBMC)">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
