@@ -1,3 +1,6 @@
+[B]1.3.4[/B]
+- Fixed: Brought inline with Team XBMC's IMDb scraper changes (version 2.2.1) i.e. "fixed: wrong imdb ID detection other certain circumtances"
+
 [B]1.3.3[/B]
 - Fixed: Brought inline with Team XBMC's IMDb scraper changes (version 2.2.0) i.e. "Better USA/International title recognition + make NfoUrl imdb site independent"
 
